--- a/css/index.css
+++ b/css/index.css
@@ -119,7 +119,7 @@ blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: '';
+  content: "";
   content: none;
 }
 table {
@@ -133,6 +133,14 @@ table {
 html,
 body {
   height: 100%;
+}
+.flex {
+  display: flex;
+  flex-direction: row;
+}
+.radius {
+  border-radius: 15%;
+  color: black;
 }
 html {
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
@@ -180,27 +188,67 @@ nav ul li a {
   font-size: 2rem;
 }
 nav ul li a:hover {
-  background-color: #4CAF50;
+  background-color: #4caf50;
 }
 #page-name {
   background: white;
   margin: 3% 20% 10% 20%;
-  border-radius: 10px;
+  border-radius: 15%;
+  color: black;
   box-shadow: 5px 8px 6px 8px #c2c1c1;
 }
 #page-name .image {
   width: 50%;
   height: 50%;
-  border-radius: 10px;
+  border-radius: 15%;
+  color: black;
   margin-bottom: 5%;
 }
 #page-name .inner {
   padding: 15%;
   text-align: center;
 }
+#page-name .inner button {
+  display: inline-block;
+  padding: 15px 25px;
+  font-size: 24px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #4caf50;
+  border: none;
+  box-shadow: 0 9px #999;
+  margin-top: 2%;
+}
+#page-name .inner button a {
+  text-decoration: none;
+  color: whitesmoke;
+}
+#page-name .inner button:hover {
+  background-color: #4caf50;
+}
+#page-name .inner button:active {
+  background-color: #4caf50;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
 .main {
   display: flex;
   flex-direction: row;
+}
+@media (max-width: 500px) {
+  .main {
+    display: flex;
+    flex-direction: column;
+  }
+  .main .spotlight .inner {
+    margin-bottom: 20%;
+  }
+  .main .spotlight2 .inner2 {
+    margin-left: 25%;
+  }
 }
 .main .spotlight {
   margin: 0 15% 0 20%;
@@ -220,7 +268,7 @@ nav ul li a:hover {
   border-radius: 10px;
 }
 .main .spotlight2 .stack .js {
-  background-color: #4CAF50;
+  background-color: #4caf50;
   border-radius: 10px;
 }
 table {
@@ -241,7 +289,7 @@ table th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
-  background-color: #4CAF50;
+  background-color: #4caf50;
   color: white;
   text-align: center;
   font-size: 2.5rem;
@@ -252,4 +300,10 @@ table tr:nth-child(even) {
 }
 table tr:hover {
   background-color: #ddd;
+}
+footer {
+  background-color: #0a0a0a;
+  padding: 2% 0;
+  color: whitesmoke;
+  text-align: center;
 }
