--- a/less/index.less
+++ b/less/index.less
@@ -85,12 +85,12 @@ time,
 mark,
 audio,
 video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 
 /* HTML5 display-role reset for older browsers */
@@ -105,207 +105,260 @@ hgroup,
 menu,
 nav,
 section {
-	display: block;
+  display: block;
 }
 
 body {
-	line-height: 1;
+  line-height: 1;
 }
 
 ol,
 ul {
-	list-style: none;
+  list-style: none;
 }
 
 blockquote,
 q {
-	quotes: none;
+  quotes: none;
 }
 
 blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-	content: '';
-	content: none;
+  content: "";
+  content: none;
 }
 
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 /* Set every element's box-sizing to border-box */
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html,
 body {
-	height: 100%;
+  height: 100%;
 }
 
 //Start of my code
 
+//Mixins
+@greenBackground: #4caf50;
+
+//Variables
+.flex {
+  display: flex;
+  flex-direction: row;
+}
+
+.radius {
+  border-radius: 15%;
+  color: black;
+}
+
 //Universal
 html {
-	font-family: "Trebuchet MS",
-		Arial,
-		Helvetica,
-		sans-serif;
-	font-size: 62.5%;
-	background: rgb(230, 228, 228);
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  font-size: 62.5%;
+  background: rgb(230, 228, 228);
 
-	p {
-		font-size: 2.0rem;
-		margin: 1%;
-	}
+  p {
+    font-size: 2rem;
+    margin: 1%;
+  }
 
-	h1 {
-		font-size: 4.5rem;
-		margin-bottom: 5%;
-	}
+  h1 {
+    font-size: 4.5rem;
+    margin-bottom: 5%;
+  }
 
-	h2 {
-		font-size: 3.1rem;
-		margin-bottom: 3%;
-		margin-top: 2%;
-		text-decoration: underline;
-	}
+  h2 {
+    font-size: 3.1rem;
+    margin-bottom: 3%;
+    margin-top: 2%;
+    text-decoration: underline;
+  }
 }
 
 //Navigation
 nav {
-	background-color: #333;
+  background-color: #333;
 
-	ul {
-		display: flex;
-		flex-direction: row;
-		justify-content: flex-end;
-		list-style-type: none;
-		margin: 0;
-		padding: 0;
-		overflow: hidden;
+  ul {
+    .flex();
+    justify-content: flex-end;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
 
+    li {
+      border-right: 1px solid #bbb;
 
-		li {
-			border-right: 1px solid #bbb;
+      &:last-child {
+        border-right: none;
+      }
 
-			&:last-child {
-				border-right: none;
-			}
+      a {
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 2rem;
 
-			a {
-				display: block;
-				color: white;
-				text-align: center;
-				padding: 14px 16px;
-				text-decoration: none;
-				font-size: 2.0rem;
-
-				&:hover {
-					background-color: #4CAF50;
-
-				}
-			}
-		}
-	}
+        &:hover {
+          background-color: @greenBackground;
+        }
+      }
+    }
+  }
 }
 
 //main into
 
 #page-name {
-	background: white;
-	margin: 3% 20% 10% 20%;
-	border-radius: 10px;
-	box-shadow: 5px 8px 6px 8px #c2c1c1;
+  background: white;
+  margin: 3% 20% 10% 20%;
+  .radius();
+  box-shadow: 5px 8px 6px 8px #c2c1c1;
 
-	.image {
-		width: 50%;
-		height: 50%;
-		border-radius: 10px;
-		margin-bottom: 5%;
-	}
+  .image {
+    width: 50%;
+    height: 50%;
+    .radius();
+    margin-bottom: 5%;
+  }
 
-	.inner {
-		padding: 15%;
-		text-align: center;
+  .inner {
+    padding: 15%;
+    text-align: center;
 
-	}
+    button {
+      display: inline-block;
+      padding: 15px 25px;
+      font-size: 24px;
+      cursor: pointer;
+      text-align: center;
+      text-decoration: none;
+      outline: none;
+      color: #fff;
+      background-color: @greenBackground;
+      border: none;
+      box-shadow: 0 9px #999;
+      margin-top: 2%;
+
+      a {
+        text-decoration: none;
+        color: whitesmoke;
+      }
+      &:hover {
+        background-color: @greenBackground;
+      }
+
+      &:active {
+        background-color: @greenBackground;
+        box-shadow: 0 5px #666;
+        transform: translateY(4px);
+      }
+    }
+  }
 }
 
 //Main
 .main {
-	display: flex;
-	flex-direction: row;
+  @media (max-width: 500px) {
+    display: flex;
+    flex-direction: column;
 
-	.spotlight {
-		margin: 0 15% 0 20%;
-		text-align: center;
-	}
+    .spotlight {
+      .inner {
+        margin-bottom: 20%;
+      }
+    }
+    .spotlight2 {
+      .inner2 {
+        margin-left: 25%;
+      }
+    }
+  }
 
-	.spotlight2 {
-		margin: 0 22% 0 0;
-		text-align: center;
+  .flex();
+  .spotlight {
+    margin: 0 15% 0 20%;
+    text-align: center;
+  }
 
-		.stack {
-			font-size: 4.5rem;
-			background: whitesmoke;
-			text-align: center;
+  .spotlight2 {
+    margin: 0 22% 0 0;
+    text-align: center;
 
+    .stack {
+      font-size: 4.5rem;
+      background: whitesmoke;
+      text-align: center;
 
-			.st {
-				border: solid black 2px;
-				border-radius: 10px;
+      .st {
+        border: solid black 2px;
+        border-radius: 10px;
+      }
 
-			}
-
-			.js {
-				background-color: #4CAF50;
-				border-radius: 10px;
-
-			}
-		}
-	}
+      .js {
+        background-color: @greenBackground;
+        border-radius: 10px;
+      }
+    }
+  }
 }
-
-
 
 //table
 table {
-	text-align: center;
-	border-collapse: collapse;
-	width: 70%;
-	margin: 10% 0 5% 15%;
+  text-align: center;
+  border-collapse: collapse;
+  width: 70%;
+  margin: 10% 0 5% 15%;
 
-	h2 {
-		text-align: center;
-	}
+  h2 {
+    text-align: center;
+  }
 
-	td {
-		border: 1px solid rgb(10, 10, 10);
-		padding: 8%;
-		font-size: 2.0rem;
-	}
+  td {
+    border: 1px solid rgb(10, 10, 10);
+    padding: 8%;
+    font-size: 2rem;
+  }
 
-	th {
-		padding-top: 12px;
-		padding-bottom: 12px;
-		text-align: left;
-		background-color: #4CAF50;
-		color: white;
-		text-align: center;
-		font-size: 2.5rem;
-		border: 1px solid rgb(10, 10, 10);
-	}
+  th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: @greenBackground;
+    color: white;
+    text-align: center;
+    font-size: 2.5rem;
+    border: 1px solid rgb(10, 10, 10);
+  }
 
-	tr {
-		&:nth-child(even) {
-			background-color: #f2f2f2;
-		}
+  tr {
+    &:nth-child(even) {
+      background-color: #f2f2f2;
+    }
 
-		&:hover {
-			background-color: #ddd;
-		}
-	}
+    &:hover {
+      background-color: #ddd;
+    }
+  }
+}
+
+//footer
+footer {
+  background-color: rgb(10, 10, 10);
+  padding: 2% 0;
+  color: whitesmoke;
+  text-align: center;
 }
